--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <html>
-<head>
-    <% include ./partial/head %>
-</head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="educate">
+<meta name="keyword" content="Educate Learning">
+<link rel="shortcut icon" href="img/favicon.png">
+    
+<title>Educate Learning</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=all" rel="stylesheet" type="text/css">
+    
+    <link href=" /css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href=" /css/bootstrap.css" rel="stylesheet" type="text/css">
 
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">
     <div class="page-wrapper">
- 	<% include ../view/partial/header  %>
+ 	  <header>
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav navbar-center">
+                <li><a href='#'>The Mission</a></li>
+                <li><a href='/about-us'>About Us</a></li>
+                <li><a href='/porgrams'>Programs</a></li>
+                <li><a href='/volunteer'>Volunteer</a></li>
+                <li><a href='/give-1'>Give</a></li>
+                <li><a href='/contact-us'>Contact Us</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
     	<div class="page-content-wrapper">
             <!-- BEGIN CONTENT BODY -->
             <div class="page-content" style="min-height: 648px;">
@@ -25,6 +50,15 @@
         	</div>
     	</div>
 	</div>
-<% include ../view/partial/footer %>
+<footer>
+    <div class="panel-footer">
+        <span class="center-block text-center">educatelearing</span>
+    </div>
+</footer>
+
+<script src=" //ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
+<script src=" /js/jquery.js" type="text/javascript"></script>
+<script src=" /js/bootstrap.min.js" type="text/javascript"></script>
+<script src=" /js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
